--- a/style.css
+++ b/style.css
@@ -84,54 +84,75 @@
     background-position: 15px center;
 }
 .brand-list {
+  display: none;
+
+  list-style: none;
+  margin-bottom: 8px;
+}
+
+@media (min-width: 768px) {
+  .brand-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: start;
+  }
+}
+
+@media (min-width: 768px) {
+  .brand-list--state_hide .brand-list__item:nth-child(6) ~ .brand-list__item {
     display: none;
-
-    list-style: none;
-    margin-bottom: 24px;
-
-
-}
-
-@media (min-width: 768px) {
-    .brand-list {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: start;
-        height: 160px;
-        overflow: hidden;
-    }
-}
-
-.brand-list__item {
-    margin-bottom: 16px;
-}
-
-
-@media (min-width: 768px) {
-    .brand-list__item {
-        margin-right: 2%;
-    }
-
-    .brand-list__item:nth-child(3n) {
-        margin-right: 0;
-    }
+  }
 }
 
 @media (min-width: 1120px) {
-    .brand-list__item {
-        margin-right: 2.66%;
-    }
+  .brand-list--state_hide .brand-list__item:nth-child(6) ~ .brand-list__item {
+    display: flex;
+  }
 
-    .brand-list__item:nth-child(3n) {
-        margin-right: 2.66%;
-    }
-
-    .brand-list__item:nth-child(4n) {
-        margin-right: 0;
-    }
+  .brand-list--state_hide .brand-list__item:nth-child(8) ~ .brand-list__item {
+    display: none;
+  }
 }
 
+@media (min-width: 768px) {
+  .brand-list--state_show .brand-list__item:nth-child(6) ~ .brand-list__item {
+    display: flex;
+  }
+}
 
+@media (min-width: 1120px) {
+  .brand-list--state_show .brand-list__item:nth-child(6) ~ .brand-list__item {
+    display: flex;
+  }
+}
+
+.brand-list__item {
+  margin-bottom: 16px;
+}
+
+@media (min-width: 768px) {
+  .brand-list__item {
+    margin-right: 2%;
+  }
+
+  .brand-list__item:nth-child(3n) {
+    margin-right: 0;
+  }
+}
+
+@media (min-width: 1120px) {
+  .brand-list__item {
+    margin-right: 2.66%;
+  }
+
+  .brand-list__item:nth-child(3n) {
+    margin-right: 2.66%;
+  }
+
+  .brand-list__item:nth-child(4n) {
+    margin-right: 0;
+  }
+}
 
 .btn {
     display: none;
